--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,3 +36,7 @@ add_executable(udp_client src/udp_socket/udp_client.cpp)
 add_executable(ipv4_ipv6 src/superSocket/ipv4_ipv6.cpp)
 add_executable(daemonProcess src/superSocket/daemonProcess.cpp)
 add_executable(pthread_echo_server src/pthread/pthread_test.cpp)
+add_executable(pthread_mutex src/pthread/pthread_mutex.cpp)
+add_executable(pthread_condition src/pthread/pthread_conditon.cpp)
+add_executable(byte_order src/linux_highperformance_code/byteOrder.cpp)
+add_executable(cgi_modify src/linux_highperformance_code/cgi.cpp)
