linux高性能服务器编程第二篇--高级IO函数--writev/readv&epoll模拟http请求文档

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,3 +40,4 @@ add_executable(pthread_mutex src/pthread/pthread_mutex.cpp)
 add_executable(pthread_condition src/pthread/pthread_conditon.cpp)
 add_executable(byte_order src/linux_highperformance_code/byteOrder.cpp)
 add_executable(cgi_modify src/linux_highperformance_code/cgi.cpp)
+add_executable(writev_readv_test src/linux_highperformance_code/writev_readv_test.cpp)
