高级io函数完结

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,5 +39,8 @@ add_executable(pthread_echo_server src/pthread/pthread_test.cpp)
 add_executable(pthread_mutex src/pthread/pthread_mutex.cpp)
 add_executable(pthread_condition src/pthread/pthread_conditon.cpp)
 add_executable(byte_order src/linux_highperformance_code/byteOrder.cpp)
-add_executable(cgi_modify src/linux_highperformance_code/cgi.cpp)
-add_executable(writev_readv_test src/linux_highperformance_code/writev_readv_test.cpp)
+add_executable(cgi_modify src/linux_highperformance_code/superiofunction/cgi.cpp)
+add_executable(writev_readv_test src/linux_highperformance_code/superiofunction/writev_readv_test.cpp)
+add_executable(sendfile_test src/linux_highperformance_code/superiofunction/sendfile_test.cpp)
+add_executable(mmap_test src/linux_highperformance_code/superiofunction/mmap_test.cpp)
+add_executable(splice_test src/linux_highperformance_code/superiofunction/splice_test.cpp)
