--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,3 +44,4 @@ add_executable(writev_readv_test src/linux_highperformance_code/superiofunction/
 add_executable(sendfile_test src/linux_highperformance_code/superiofunction/sendfile_test.cpp)
 add_executable(mmap_test src/linux_highperformance_code/superiofunction/mmap_test.cpp)
 add_executable(splice_test src/linux_highperformance_code/superiofunction/splice_test.cpp)
+add_executable(tcp_udp src/linux_highperformance_code/tcp_udp.cpp)
